A2 - added markuup and basic css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="prachi" content="author">
+    <meta name="description" content="this is a digital agency website.">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
     <title>Gohub</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header class="main-header">
+            <h1 class="logo">
+                <a href="#">
+                    <img src="assets/images/logo-gohub.png" alt="Gohub" width="152" height="46" />
+                </a>
+            </h1>
+            <nav class="menu">
+                <ul>
+                    <li>
+                        <a href="#">Product</a>
+                    </li>
+                    <li>
+                        <a href="#">Customer</a>
+                    </li>
+                    <li>
+                        <a href="#">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#">Docs</a>
+                    </li>
+                    <li>
+                        <a href="#">Sign In</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section class="hero-banner">
+            <h2>
+                Balance agility with stability!
+            </h2>
+            <p>
+                Gohub monitors application stability, so you can make data-driven decisions on whether you should be building new
+                features, or fixing bugs.
+            </p>
+            <div class="cta-wrapper">
+                <a href="#" class="button">Get Started</a>
+                <h5>Questions? Talk to our team</h5><span class="icon-arrow-right2"></span>
+            </div>
+        </section>
+
+        <section class="promo">
+            <ul>
+                <li>
+                    <h3>Improve the stability of your application</h3>
+                    <p>The platform has multiple functionalities and key features. With our intelligent system, you can approve bookings and
+                        monitor everything in your business online.</p>
+                </li>
+                <li>
+                    <h4>Be visible to “like”</h4>
+                    <p>Strengthen your digital visibility in a universe where everyone is interested in travelling and renting gears. We help
+                    you build your presence and make you relevant without you having to lift a finger!</p>
+                </li>
+                <li>
+                    <h4>Monitor online</h4>
+                    <p><p>The platform has multiple functionalities and key features. With our intelligent system, you can approve bookings and
+                        monitor everything in your business online.</p></p>
+                </li>
+                <li>
+                    <h4>More income</h4>
+                    <p>Being on a digital platform is another sales channel added to strengthen your business. More work, in your hands. With
+                    our insights tools, we analyze your gear's performance in any season</p>
+                </li>
+            
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
