B1 - adding reposnive style

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="prachi" content="author">
     <meta name="description" content="this is a digital agency website.">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <title>Gohub</title>
 </head>
 <body>
     <div class="wrapper">
+        <!-- Header Starts -->
         <header class="main-header">
             <h1 class="logo">
                 <a href="#">
@@ -38,6 +39,8 @@
                 </ul>
             </nav>
         </header>
+        <!-- Header Ends -->
+        <!-- 1 Hero Banner -->
         <section class="hero-banner">
             <h2>
                 Balance agility with stability!
@@ -51,7 +54,7 @@
                 <h5>Questions? Talk to our team</h5><span class="icon-arrow-right2"></span>
             </div>
         </section>
-
+        <!-- 2 Promo -->
         <section class="promo">
             <ul>
                 <li>
@@ -74,7 +77,6 @@
                     <p>Being on a digital platform is another sales channel added to strengthen your business. More work, in your hands. With
                     our insights tools, we analyze your gear's performance in any season</p>
                 </li>
-            
             </ul>
         </section>
     </div>
