--- a/styleguide.html
+++ b/styleguide.html
@@ -26,7 +26,7 @@
         <hr />
         
         <!-- 1 -->
-        <a href="#" class="button">Get Started</a>
+        <a href="#" class="button">Module Button</a>
         <hr />
 
         <!-- 2 -->
@@ -37,7 +37,7 @@
 
         <!-- 3 -->
         <div class="cta-wrapper">
-            <a href="#" class="button">Get Started</a>
+            <a href="#" class="button">Module Cta Wrapper</a>
             <h5>Questions? Talk to our team</h5><span class="icon-arrow-right2"></span>
         </div>
         <hr />
