next changes in file

--- a/index.html
+++ b/index.html
@@ -63,21 +63,162 @@
                         monitor everything in your business online.</p>
                 </li>
                 <li>
+                    <img src="assets/images/icon-promo-ratings.png" width="127" height="127" alt="rating"/>
                     <h4>Be visible to “like”</h4>
                     <p>Strengthen your digital visibility in a universe where everyone is interested in travelling and renting gears. We help
                     you build your presence and make you relevant without you having to lift a finger!</p>
                 </li>
                 <li>
+                    <img src="assets/images/icon-promo-online.png" width="127" height="127" alt="monitor online"/>
                     <h4>Monitor online</h4>
                     <p><p>The platform has multiple functionalities and key features. With our intelligent system, you can approve bookings and
                         monitor everything in your business online.</p></p>
                 </li>
                 <li>
+                    <img src="assets/images/icon-promo-income.png" width="127" height="127" alt="more incom"/>
                     <h4>More income</h4>
                     <p>Being on a digital platform is another sales channel added to strengthen your business. More work, in your hands. With
                     our insights tools, we analyze your gear's performance in any season</p>
                 </li>
             </ul>
+        </section>
+
+        <section class="features">
+            <h3>Proof make increasing conversation simple.</h3>
+            <p>Getting a conversion boost didn’t used to be this easy. Luckily, you found Proof. Now you have the tools to let your customer do the selling for you.</p>
+        
+            <ul class="features-list">
+                <li>
+                    <h5>higher conversation</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>save on aquasition</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>increase vistors trust</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>social influence</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>activity notifications</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>    
+                <li>
+                    <h5>customer journeys</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>custom timing</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>live visitor count</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>    
+                <li>
+                    <h5>visitor identification</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>>custome rules</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>mobile optimized</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>
+                <li>
+                    <h5>language transiation</h5>
+                    <p>Convert more website visitors into signups and purchases.</p>
+                </li>               
+            </ul>
+        </section>
+
+        <section class="services">
+            <ul class="services-list">
+                <li>
+                    <img src="assets/images/feature-safety.png" width="640" height="462" alt="sefty"/>
+                    <h3>Your sefty is always a top priority.</h3>
+                    <p>We’re committed to helping drivers and riders get where they want to go with confidence.</p>
+                    <h4>Drive</h4>
+                    <p>Drive when you want. Find opportunities around you.</p>
+                    <h4>Ride</h4>
+                    <p>Tap your phone. Get where you're headed.</p>
+
+                    <div class="cta-wrapper">
+                        <a href="#" class="button">Module Cta Wrapper</a>
+                        <h5>Questions? Talk to our team</h5><span class="icon-arrow-right2"></span>
+                    </div>
+                </li>
+                <li>
+                    <img src="assets/images/feature-opportunity.png" width="600" height="462"      alt="opportunity"/>
+                    <h3>Move the way you want doors are always opening.</h3>
+                    <p>We’re committed to helping drivers and riders get where they want to go with confidence.</p>
+                    <h4>Drive</h4>
+                    <p>Drive when you want. Find opportunities around you.</p>
+                    <h4>Ride</h4>
+                    <p>Tap your phone. Get where you're headed.</p>
+
+                    <div class="cta-wrapper">
+                        <a href="#" class="button">Module Cta Wrapper</a>
+                        <h5>Questions? Talk to our team</h5><span class="icon-arrow-right2"></span>
+                    </div>        
+                </li>
+                <li>
+                    <img src="assets/images/feature-finances.png" width="600" height="462" alt="fianance"/>
+                    <h3>our fianances on auto-pilot</h3>
+                    <p>With Qonto, admin hassle are over! Unlimited history, auto-categorised transactions, simplified transfers entries, budgets, history exportable for accounting... and the list goes on!</p>
+                </li>
+            </ul>
+
+            <ul class="tick-list">
+                <li>
+                    <h4>Save Time</h4>
+                    <ul>
+                        <li>Intiutive process and simple interface</li>
+                        <li>Online and paperless</li>
+                        <li>Real-time notifications</li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>Monitor your Expenses</h4>
+                    <ul>
+                        <li>Specific access/right by users</li>
+                        <li>Online and paperless</li>
+                        <li>Real-time notifications</li>
+                    </ul>        
+                </li>
+                <li>
+                    <h4>Make accounting easier</h4>
+                    <ul>
+                        <li>Unlimited history</li>
+                        <li>Online and paperless</li>
+                        <li>Real-time notifications</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section class="contact-us">
+            <h3>Ready to get started?</h3>
+
+            <form action="action_page" class="mail">
+                <input type="text" placeholder="Email Address" value="Email Address" id="Email Address">
+            </form>
+
+            <h5>Get a guided demo with an OKR experts.</h5>
+        </section>
+
+        <section class="footer">
+            <a href="#">
+                <img src="assets/images/logo-gohub.png" alt="Gohub" width="152" height="46" />
+            </a>
+            
         </section>
     </div>
 </body>
