code for next section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="this is a digital agency website.">
     <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main-tablet.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main-desktop.css">
     <title>Gohub</title>
 </head>
 <body>
@@ -56,14 +58,14 @@
         </section>
         <!-- 2 Promo -->
         <section class="promo">
-            <ul>
+            <ul class="promo-list">
                 <li>
                     <h3>Improve the stability of your application</h3>
                     <p>The platform has multiple functionalities and key features. With our intelligent system, you can approve bookings and
                         monitor everything in your business online.</p>
-                </li>
+                </li> 
                 <li>
-                    <img src="assets/images/icon-promo-ratings.png" width="127" height="127" alt="rating"/>
+                    <img src="assets/images/icon-promo-ratings.png" width="176" height="127" alt="rating"/>
                     <h4>Be visible to “like”</h4>
                     <p>Strengthen your digital visibility in a universe where everyone is interested in travelling and renting gears. We help
                     you build your presence and make you relevant without you having to lift a finger!</p>
@@ -71,154 +73,223 @@
                 <li>
                     <img src="assets/images/icon-promo-online.png" width="127" height="127" alt="monitor online"/>
                     <h4>Monitor online</h4>
-                    <p><p>The platform has multiple functionalities and key features. With our intelligent system, you can approve bookings and
-                        monitor everything in your business online.</p></p>
+                    <p>The platform has multiple functionalities and key features. With our intelligent system, you can approve bookings and
+                        monitor everything in your business online.</p>
                 </li>
                 <li>
-                    <img src="assets/images/icon-promo-income.png" width="127" height="127" alt="more incom"/>
+                    <img src="assets/images/icon-promo-income.png" width="133" height="127" alt="more incom"/>
                     <h4>More income</h4>
                     <p>Being on a digital platform is another sales channel added to strengthen your business. More work, in your hands. With
-                    our insights tools, we analyze your gear's performance in any season</p>
+                    our insights tools, we analyze your gear's performance.</p>
                 </li>
             </ul>
         </section>
-
-        <section class="features">
+        <!-- 3 features -->
+         <section class="features">
             <h3>Proof make increasing conversation simple.</h3>
             <p>Getting a conversion boost didn’t used to be this easy. Luckily, you found Proof. Now you have the tools to let your customer do the selling for you.</p>
         
             <ul class="features-list">
                 <li>
+                    <span class="icon-feature icon-higher"></span>
                     <h5>higher conversation</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                    <span class="icon-feature icon-save"></span>
                     <h5>save on aquasition</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                   <span class="icon-feature icon-trust"></span>
                     <h5>increase vistors trust</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                    <span class="icon-feature icon-social"></span>
                     <h5>social influence</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                    <span class="icon-feature icon-activity"></span>
                     <h5>activity notifications</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>    
                 <li>
+                    <span class="icon-feature icon-journey"></span>
                     <h5>customer journeys</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                    <span class="icon-feature icon-timing"></span>
                     <h5>custom timing</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                    <span class="icon-feature icon-live"></span>
                     <h5>live visitor count</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>    
                 <li>
+                    <span class="icon-feature icon-identification"></span>
                     <h5>visitor identification</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
-                    <h5>>custome rules</h5>
+                    <span class="icon-feature icon-rules"></span>
+                    <h5>custome rules</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                    <span class="icon-feature icon-mobile"></span>
                     <h5>mobile optimized</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>
                 <li>
+                    <span class="icon-feature icon-language"></span>
                     <h5>language transiation</h5>
                     <p>Convert more website visitors into signups and purchases.</p>
                 </li>               
             </ul>
         </section>
-
+        <!-- 4 services -->
         <section class="services">
             <ul class="services-list">
                 <li>
                     <img src="assets/images/feature-safety.png" width="640" height="462" alt="sefty"/>
+                </li>
+                <li>
                     <h3>Your sefty is always a top priority.</h3>
                     <p>We’re committed to helping drivers and riders get where they want to go with confidence.</p>
-                    <h4>Drive</h4>
-                    <p>Drive when you want. Find opportunities around you.</p>
-                    <h4>Ride</h4>
-                    <p>Tap your phone. Get where you're headed.</p>
 
+                    <ul class="services-drive">
+                        <li>
+                            <h4>Drive</h4>
+                            <p>Drive when you want. Find opportunities around you.</p>
+                        </li>
+                        <li>
+                            <h4>Ride</h4>
+                            <p>Tap your phone. Get where you're headed.</p>
+                        </li>
+                    </ul>
                     <div class="cta-wrapper">
-                        <a href="#" class="button">Module Cta Wrapper</a>
+                        <a href="#" class="button">Get Started</a>
                         <h5>Questions? Talk to our team</h5><span class="icon-arrow-right2"></span>
                     </div>
                 </li>
-                <li>
-                    <img src="assets/images/feature-opportunity.png" width="600" height="462"      alt="opportunity"/>
+            </ul>
+            <ul class="services-list opportunity">
+                <li class="opportunity-img">
+                    <img src="assets/images/feature-opportunity.png" width="600" height="462"  alt="opportunity"/>
+                </li>
+                <li class="opportunity-content">
                     <h3>Move the way you want doors are always opening.</h3>
                     <p>We’re committed to helping drivers and riders get where they want to go with confidence.</p>
-                    <h4>Drive</h4>
-                    <p>Drive when you want. Find opportunities around you.</p>
-                    <h4>Ride</h4>
-                    <p>Tap your phone. Get where you're headed.</p>
 
+                    <ul class="services-drive">
+                        <li>
+                            <h4>Drive</h4>
+                            <p>Drive when you want. Find opportunities around you.</p>
+                        </li>>
+                        <li>
+                            <h4>Ride</h4>
+                            <p>Tap your phone. Get where you're headed.</p>
+                        </li>
+                    </ul>
                     <div class="cta-wrapper">
-                        <a href="#" class="button">Module Cta Wrapper</a>
+                        <a href="#" class="button">Get Started</a>
                         <h5>Questions? Talk to our team</h5><span class="icon-arrow-right2"></span>
                     </div>        
                 </li>
-                <li>
-                    <img src="assets/images/feature-finances.png" width="600" height="462" alt="fianance"/>
-                    <h3>our fianances on auto-pilot</h3>
-                    <p>With Qonto, admin hassle are over! Unlimited history, auto-categorised transactions, simplified transfers entries, budgets, history exportable for accounting... and the list goes on!</p>
-                </li>
             </ul>
 
-            <ul class="tick-list">
+            <ul class="services-list fianance">
                 <li>
+                    <img src="assets/images/feature-finances.png" width="600" height="462" alt="fianance"/>
+                </li>
+                <li>
+                    <h3>our fianances on auto-pilot</h3>
+                    <p>With Qonto, admin hassle are over! Unlimited history, auto-categorised transactions, simplified transfers entries, budgets, history exportable for accounting... and the list goes on!</p>
                     <h4>Save Time</h4>
-                    <ul>
+                    <ul class="tick-list">
                         <li>Intiutive process and simple interface</li>
                         <li>Online and paperless</li>
                         <li>Real-time notifications</li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Monitor your Expenses</h4>
-                    <ul>
+                    </ul>     
+                    <!-- <h4>Monitor your Expenses</h4>
+                    <ul class="tick-list">
                         <li>Specific access/right by users</li>
                         <li>Online and paperless</li>
                         <li>Real-time notifications</li>
                     </ul>        
-                </li>
-                <li>
                     <h4>Make accounting easier</h4>
-                    <ul>
+                    <ul class="tick-list">
                         <li>Unlimited history</li>
                         <li>Online and paperless</li>
                         <li>Real-time notifications</li>
-                    </ul>
+                    </ul> -->
                 </li>
             </ul>
         </section>
-
+        <!-- 5 contact-us -->
         <section class="contact-us">
+            <img src="assets/images/icon-shape.png" width="50" height="10" alt="icon-shape"/>
             <h3>Ready to get started?</h3>
-
-            <form action="action_page" class="mail">
-                <input type="text" placeholder="Email Address" value="Email Address" id="Email Address">
-            </form>
-
+            <div class="form">
+                <form action="action_page" class="mail">
+                    <input type="text" placeholder="Email Address" class="mail-text" value="Email Address" id="Email Address" required/>
+                    <span class="icon-Shape-10"></span>
+                </form>
+            </div>
             <h5>Get a guided demo with an OKR experts.</h5>
         </section>
 
         <section class="footer">
-            <a href="#">
-                <img src="assets/images/logo-gohub.png" alt="Gohub" width="152" height="46" />
-            </a>
-            
+            <div class="footer-contact">
+                <a href="#">
+                    <img src="assets/images/logo-footer.png" alt="Gohub" width="100" height="30" />
+                </a>
+                <h6 class="mobno">EU: +49 30 555 7322 77</h6>
+                <h6>US: +1-415-800-4497</h6>
+                <a href="#">info@gohub.ee</a>
+                <span class="icon-social icon-linkedin2"></span>
+                <span class="icon-social icon-facebook"></span>
+                <span class="icon-social icon-twitter"></span>
+                <span class="icon-social icon-github"></span>
+                <p>2018 Uber Technologies Inc.</p>
+            </div>
+            <div class="footer-blog">
+                <ul class="footer-list">
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Newsroom</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Gohub API</a></li>
+                    <li><a href="#">Gift cards</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Gohub vs. driving jobs</a></li>
+                </ul>
+                <ul class="footer-list">
+                    <li><a href="#">Offerings</a></li>
+                    <li><a href="#">Gohub Eats for food delivery</a></li>
+                    <li><a href="#">Gohub for Business</a></li>
+                    <li><a href="#">Gohub Freight</a></li>
+                    <li><a href="#">Gohub Health</a></li>
+                </ul>
+                <ul class="footer-list">
+                    <li><a href="#">upport</a></li>
+                    <li><a href="#">Términos y condiciones</a></li>
+                    <li><a href="#">Privacidad</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                    <li><a href="#">Connect</a></li>
+                </ul>
+            </div>
+            <div class="footer-privacy">
+                <ul class="footer-privacylist">
+                    <li><a href="#">Privacy</a></li> 
+                    <li><a href="#">Accessiblity</a></li> 
+                    <li><a href="#">Terms</a></li>
+                </ul>
+            </div>
         </section>
     </div>
 </body>
