gohub final project.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <li>
                             <h4>Drive</h4>
                             <p>Drive when you want. Find opportunities around you.</p>
-                        </li>>
+                        </li>
                         <li>
                             <h4>Ride</h4>
                             <p>Tap your phone. Get where you're headed.</p>
@@ -208,7 +208,7 @@
                     <img src="assets/images/feature-finances.png" width="600" height="462" alt="fianance"/>
                 </li>
                 <li>
-                    <h3>our fianances on auto-pilot</h3>
+                    <h3>Our fianances on auto-pilot</h3>
                     <p>With Qonto, admin hassle are over! Unlimited history, auto-categorised transactions, simplified transfers entries, budgets, history exportable for accounting... and the list goes on!</p>
                     <h4>Save Time</h4>
                     <ul class="tick-list">
@@ -231,66 +231,71 @@
                 </li>
             </ul>
         </section>
+    </div>
         <!-- 5 contact-us -->
         <section class="contact-us">
-            <img src="assets/images/icon-shape.png" width="50" height="10" alt="icon-shape"/>
-            <h3>Ready to get started?</h3>
-            <div class="form">
-                <form action="action_page" class="mail">
-                    <input type="text" placeholder="Email Address" class="mail-text" value="Email Address" id="Email Address" required/>
-                    <span class="icon-Shape-10"></span>
-                </form>
+            <div class="wrapper">
+                <img src="assets/images/icon-shape.png" width="50" height="10" alt="icon-shape"/>
+                <h3>Ready to get started?</h3>
+                <div class="form">
+                    <form action="action_page" class="mail">
+                        <input type="text" placeholder="Email Address" class="mail-text" value="Email Address" id="Email Address" required/>
+                        <span class="icon-Shape-10"></span>
+                    </form>
+                </div>
+                <h5>Get a guided demo with an OKR experts.</h5>
             </div>
-            <h5>Get a guided demo with an OKR experts.</h5>
         </section>
 
         <section class="footer">
-            <div class="footer-contact">
-                <a href="#">
-                    <img src="assets/images/logo-footer.png" alt="Gohub" width="100" height="30" />
-                </a>
-                <h6 class="mobno">EU: +49 30 555 7322 77</h6>
-                <h6>US: +1-415-800-4497</h6>
-                <a href="#">info@gohub.ee</a>
-                <span class="icon-social icon-linkedin2"></span>
-                <span class="icon-social icon-facebook"></span>
-                <span class="icon-social icon-twitter"></span>
-                <span class="icon-social icon-github"></span>
-                <p>2018 Uber Technologies Inc.</p>
-            </div>
-            <div class="footer-blog">
-                <ul class="footer-list">
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Newsroom</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Gohub API</a></li>
-                    <li><a href="#">Gift cards</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Gohub vs. driving jobs</a></li>
-                </ul>
-                <ul class="footer-list">
-                    <li><a href="#">Offerings</a></li>
-                    <li><a href="#">Gohub Eats for food delivery</a></li>
-                    <li><a href="#">Gohub for Business</a></li>
-                    <li><a href="#">Gohub Freight</a></li>
-                    <li><a href="#">Gohub Health</a></li>
-                </ul>
-                <ul class="footer-list">
-                    <li><a href="#">upport</a></li>
-                    <li><a href="#">Términos y condiciones</a></li>
-                    <li><a href="#">Privacidad</a></li>
-                    <li><a href="#">Ayuda</a></li>
-                    <li><a href="#">Connect</a></li>
-                </ul>
-            </div>
-            <div class="footer-privacy">
-                <ul class="footer-privacylist">
-                    <li><a href="#">Privacy</a></li> 
-                    <li><a href="#">Accessiblity</a></li> 
-                    <li><a href="#">Terms</a></li>
-                </ul>
+            <div class="wrapper">
+                <div class="footer-contact">
+                    <a href="#">
+                        <img src="assets/images/logo-footer.png" alt="Gohub" width="100" height="30" />
+                    </a>
+                    <h6 class="mobno">EU: +49 30 555 7322 77</h6>
+                    <h6>US: +1-415-800-4497</h6>
+                    <a href="#">info@gohub.ee</a>
+                    <span class="icon-social icon-linkedin2"></span>
+                    <span class="icon-social icon-facebook"></span>
+                    <span class="icon-social icon-twitter"></span>
+                    <span class="icon-social icon-github"></span>
+                </div>
+                <div class="footer-blog">
+                    <ul>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Newsroom</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Gohub API</a></li>
+                        <li><a href="#">Gift cards</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Gohub vs. driving jobs</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Offerings</a></li>
+                        <li><a href="#">Gohub Eats for food delivery</a></li>
+                        <li><a href="#">Gohub for Business</a></li>
+                        <li><a href="#">Gohub Freight</a></li>
+                        <li><a href="#">Gohub Health</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Términos y condiciones</a></li>
+                        <li><a href="#">Privacidad</a></li>
+                        <li><a href="#">Ayuda</a></li>
+                        <li><a href="#">Connect</a></li>
+                    </ul>
+                </div>
+                <div class="footer-copyrights">
+                    <p>&copy; 2018 Uber Technologies Inc.</p>
+                    
+                    <ul class="footer-privacylist">
+                        <li><a href="#">Privacy</a></li> 
+                        <li><a href="#">Accessiblity</a></li> 
+                        <li><a href="#">Terms</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
-    </div>
 </body>
 </html>
