changes in footer a

--- a/index.html
+++ b/index.html
@@ -256,10 +256,11 @@
                     <h6 class="mobno">EU: +49 30 555 7322 77</h6>
                     <h6>US: +1-415-800-4497</h6>
                     <a href="#">info@gohub.ee</a>
-                    <span class="icon-social icon-linkedin2"></span>
-                    <span class="icon-social icon-facebook"></span>
-                    <span class="icon-social icon-twitter"></span>
-                    <span class="icon-social icon-github"></span>
+                    <a href="#"><span class="icon-social icon-linkedin2"></span>linkedin</a>
+                    <a href="#"><span class="icon-social icon-facebook"></span>facebook</a>
+                    <a href="#"><span class="icon-social icon-twitter"></span>twitter</a>
+                    <a href="#"><span class="icon-social icon-github"></span>github</a>
+                </a>
                 </div>
                 <div class="footer-blog">
                     <ul>
